<resources>
    <string name="app_name">ПачуТТё</string>
    <string name="action_settings">Settings</string>
    <string name="tvHeadDiary">Дневник самочувствия</string>
    <string name="tvPatient">Клиент</string>
    <string name="tvLocation">Местонахождение</string>
    <string name="tvPeriod">Период наблюдения</string>
    <string name="tvHeadJournal">Журнал отмеченных состояний</string>
    <string name="tvLastName">Фамилия</string>
    <string name="tvFirstName">Имя</string>
    <string name="tvMiddleName">Отчество</string>
    <string name="tvDDateFrom">Начало периода</string>
    <string name="tvDDateTo">Окончание периода</string>
    <string name="btnSavePeriod">Применить</string>
    <string name="error_period_date">Дата начала периода \nдолжна быть раньше \nдаты окончания периода!</string>
    <string name="period_dialog_title">Выбор периода</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_mainActivity">Главный экран1</string>
    <string name="menu_item_diary">Дневник самочувствия</string>
    <string name="menu_item_questionnaire">Опросный лист</string>
    <string name="menu_item_get_data">Обновить</string>
    <string name="menu_item_logout">Выйти</string>
    <string name="menu_item_changeuser">Сменить пользователя</string>
    <string name="menu_item_registration">Регистрация</string>
    <string name="menu_item_personaldata">Личные данные</string>
    <string name="menu_item_upload_user_data">Отправить</string>
    <string name="fragment_text">test text</string>
    <string name="fragment_text1">Что и как влияет на самочувствие</string>
    <string name="fragment_text2">Как изменялись параметры, влияющие на самочувствие</string>
    <string name="not_found">данных не найдено</string>
    <string name="title_activity_login">Вход</string>
    <string name="attention">Внимание</string>
    <string name="prompt_fname">Имя</string>
    <string name="prompt_lname">Фамилия</string>
    <string name="prompt_mname">Отчество</string>
    <string name="prompt_birthdate">Дата рождения</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_new_password">Введите новый пароль</string>
    <string name="action_sign_in"><b>Вход</b></string>
    <string name="action_change_password"><b>Сменить пароль</b></string>
    <string name="action_changing_password">Изменение пароля...</string>
    <string name="action_anonimsign_in"><u><b>Ознакомительный просмотр</b></u></string>
    <string name="action_register"><u><b>Регистрация</b></u></string>
    <string name="action_sign_in_short">Вход</string>
    <string name="action_forgot_password"><u><b>Восстановление пароля</b></u></string>
    <string name="login_progress_signing_in">Вход</string>
    <string name="info_unsaved_data">У текущего пользователя существуют неотправленные данные на сервер. Чтобы не потерять эти данные вам необходимо выполнить отправку данных на сервер</string>
    <string name="error_invalid_email">Неверное имя пользователя</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Поле, необходимое для заполнения</string>
    <string name="network_error">Сервер не доступен. Проверьте соединение с Интернетом</string>
    <string name="registration_fio_hint">Псевдоним</string>
    <string name="registration_user_success">Регистрация пользователя прошла успешно.</string>
    <string name="registration_required_field">Обязательное поле.</string>
    <string name="registration_invalid_value">Недопустимое значение.</string>
    <string name="registration_password_notmatch">Указанные пароли не совпадают.</string>
    <string name="registration_country_invalid">Неверно введена страна.</string>
    <string name="registration_city_invalid">Неверно введен город.</string>
    <string name="registration_required_all_answer">Необходимо ответить на 2 вопроса одновременно для возможности восстановления пароля.</string>
    <string name="registration_required_different_question">Необходимо выбрать два разных вопроса для восстановления пароля.</string>
    <string name="registration_captcha_invalid">Слово, указанное на картинке, введено неправильно.</string>
    <string name="request_registration_title">Сообщение</string>
    <string name="request_registration_message">Для ведения дневника самочувствия необходима регистрация.</string>
    <string name="request_registration_ok">Регистрация</string>
    <string name="request_registration_cancel">Пропустить</string>
    <string name="statistics_title">Статистика болезненных ощущений</string>
    <string name="my_statistics_title">Статистика моих болезненных ощущений</string>
    <string name="bodyfeelingtype_choose"></string>
    <string name="bodyfeeling_add_toast">Новое недомогание добавлено в дневник</string>
    <string name="datetime_dialogtitle">Дата и время</string>
    <string name="ok">Ok</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="no_data">Нет данных</string>
    <string name="cancel">Отмена</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="history_bodyfeeling_title">История недомоганий</string>
    <string formatted="false" name="history_feeling_delete_title">%d Selected</string>
    <string name="personal_data_title">Личные данные</string>
    <string name="login_anonim_first_name">Имя</string>
    <string name="login_anonim_last_name">Фамилия</string>
    <string name="login_anonim_middle_name">Отчество</string>
    <string name="questionnaire_bodyfeeling_tab">Ощущения локализованные</string>
    <string name="questionnaire_commonfeeling_tab">Ощущения общие</string>
    <string name="questionnaire_psyhologicalfeeling_tab">Психологическое состояние</string>
    <string name="questionnaire_factor_tab">Возможные личные факторы</string>
    <string name="questionnaire_estimation_health_tab">Оценка самочувствия</string>
    <string name="incorect_value_date">Некорректное значение даты.</string>
    <string name="incorect_value_feeling_date_before">Запись не сохранена. Дата и время указаны ранее даты рождения!</string>
    <string name="incorect_value_feeling_date_after">Запись не сохранена. Дата и время указаны позднее текущих!</string>
    <string name="incorect_value_feeling_date">На указанную дату уже существует данное ощущение.</string>
    <string name="incorect_value_factor_date">На указанную дату уже существует данный фактор.</string>
    <string name="settings_choose_default_color_dialog">Выбор цвета по умолчанию</string>
    <string name="settings_choose_color_dialog">Выбор цвета</string>
    <string name="tab_weather_title">Погода</string>
    <string name="tab_astronomy_title">Астрономия</string>
    <string name="tab_sun_title">Солнце</string>
    <string name="tab_moon_title">Луна</string>
    <string name="tab_geophysics_title">Геогелиофизика</string>
    <string name="tab_user_factor">Пользовательские факторы</string>
    <string-array name="sync_period_array_values">        
        <item>3600</item>
        <item>7200</item>
        <item>10800</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>        
    </string-array>
    <string-array name="sync_period_array">        
        <item>Каждый час</item>
        <item>Раз в 2 часа</item>
        <item>Раз в 3 часа</item>
        <item>Раз в 6 часов </item>
        <item>Раз в 12 часов</item>
        <item>Раз в сутки</item>        
    </string-array>
    <string-array name="graph_weather_list_array">        
        <item>Атмосферное давление</item>
        <item>Температура</item>
        <item>Влажность</item>
        <item>Облачность</item>
        <item>Осадки</item>
        <item>Скорость ветра</item>        
    </string-array>
    <string-array name="graph_weather_dimension_list_array">             
        <item>мм рт. ст.</item>
        <item>°С</item>
        <item>%</item>
        <item>%</item>
        <item>мм</item>
        <item>м/c</item>        
    </string-array>
    <string-array name="graph_helio_list_array">        
        <item>Поток Солнечной радиации</item>
        <item>Количество Солнечных пятен</item>
        <item>Площадь Солнечных пятен</item>
        <item>Количество новых пятен</item>
        <item>Солнечные вспышки класса 1</item>
        <item>Солнечные вспышки класса 2</item>
        <item>Солнечные вспышки класса 3</item>
        <item>Солнечные вспышки класса S</item>
        <item>Солнечные вспышки класса C</item>
        <item>Солнечные вспышки класса M</item>
        <item>Солнечные вспышки класса X</item>
        <item>Мягкий рентген</item>        
    </string-array>
    <string-array name="graph_helio_dimension_list_array">             
        <item></item>
        <item>ед.</item>
        <item>10e-6 полусфер</item>
        <item>ед.</item>
        <item>ед.</item>
        <item>ед.</item>
        <item>ед.</item>
        <item>ед.</item>
        <item>ед.</item>
        <item>ед.</item>
        <item>ед.</item>
        <item >А</item>        
    </string-array>
    <string-array name="graph_sun_list_array">        
        <item>Солнечные ритмы</item>              
    </string-array>
    <string-array name="graph_sun_dimension_list_array">             
        <item></item>                
    </string-array>
    <string-array name="graph_moon_list_array">        
        <item>Видимость диска луны</item>
        <item>Возраст Луны</item>
        <item>Лунные ритмы</item>
    </string-array>
    <string-array name="graph_moon_dimension_list_array">             
        <item>%</item>
        <item>дни, часы</item>
        <item></item>               
    </string-array>
    <string-array name="graph_planet_list_array">        
        <item>Меркурий</item>
        <item>Венера</item>
        <item>Марс</item>
        <item>Юпитер</item>
        <item>Сатурн</item>
        <item>Уран</item>
        <item>Нептун</item>
        <item>Плутон</item>
    </string-array>
    <string-array name="graph_planet_dimension_list_array">
        <item></item>                
        <item></item>                
        <item></item>                
        <item></item>                
        <item></item>                
        <item></item>                
        <item></item>                
        <item></item>                
    </string-array>
    <string-array name="graph_geophysics_list_array">        
        <item>Индекс Kp</item>
        <item>Индекс Ap</item>
    </string-array>
    <string-array name="graph_geophysics_dimension_list_array">             
        <item></item>
        <item>нТл</item>                    
    </string-array>
    <string-array name="graph_particle_list_array">
		<item >Протоны 1 МеВ</item>
		<item >Протоны 10 МеВ</item>
		<item >Протоны 100 МеВ</item>
		<item >Электроны 0.8 МеВ</item>
		<item >Электроны 2 МеВ</item>
	</string-array>
	<string-array name="graph_particle_dimension_list_array">
		<item >ед.</item>
		<item >ед.</item>
		<item >ед.</item>
		<item >ед.</item>
		<item >ед.</item>
	</string-array>
    <string-array name="registration_social_status_array">
        <item>Рабочий</item>
        <item>Служащий</item>
        <item>Руководитель</item>        
    </string-array>
    <string-array name="registration_marital_status_array">
        <item>Холост/Не замужем</item>
        <item>Женат/Замужем</item>
        <item>Разведен/Разведена</item>        
    </string-array>
    <string-array name="registration_pressure_array">
        <item>Низкое</item>
        <item>Нормальное</item>
        <item>Высокое</item>        
    </string-array>
    <string name="crash_toast_text">Пожалуйста, отправьте сообщение об ошибке разработчику</string>
	<string name="crash_dialog_title">Приложение остановлено</string>
</resources>