<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_upload_user_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_item_upload_user_data"/>
    
    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_item_settings"/>
    
    <item
        android:id="@+id/menu_item_registration"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_item_registration"
        android:visible="false"/>
    
    <item
        android:id="@+id/menu_item_personaldata"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_item_personaldata"
        android:visible="false"/>
    
    <item
        android:id="@+id/menu_item_changeuser"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/menu_item_changeuser"/>
    
     <item
        android:id="@+id/menu_item_logout"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/menu_item_logout"/>
    
    <item
        android:id="@+id/menu_item_get_data"
        android:orderInCategory="106"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_get_data"
        android:icon="@drawable/load_data"/>

</menu>
