<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment" >

    <!-- Login progress -->
    <include layout="@layout/login_status_progress"/>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/login_form_layout"
            style="@style/LoginFormContainer"
            android:background="@drawable/shadow"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_lname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/et_text_size" />

            <EditText
                android:id="@+id/etFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/et_text_size" />

            <EditText
                android:id="@+id/etMName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_mname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/et_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:text="Дата рождения"
                    android:textSize="@dimen/et_text_size" />

                <DatePicker
                    android:id="@+id/dpBirthDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:calendarViewShown="false"
                    android:hint="@string/prompt_birthdate" />
            </LinearLayout>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/et_text_size" />
            
            <CheckBox
                android:id="@+id/cbStorePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_sign_in"
                android:textSize="@dimen/et_text_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvLinkRegister"
                    style="@style/TextViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="20dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_register"
                    android:textSize="@dimen/et_text_size" />
                
                <TextView
                    android:id="@+id/tvLinkChangePassword"
                    style="@style/TextViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="20dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_forgot_password"
                    android:textSize="@dimen/et_text_size" />

                <TextView
                    android:id="@+id/tvLinkAnonimLogin"
                    style="@style/TextViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="20dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_anonimsign_in"
                    android:textSize="@dimen/et_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>