<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_recovery_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryPasswordFragment" >

    <!-- Login progress -->
    <include layout="@layout/login_status_progress"/>

    
    <!-- Login form -->

    <ScrollView
        android:id="@+id/recovery_password_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/recovery_password_form_layout"
            style="@style/LoginFormContainer"
            android:background="@drawable/shadow"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_lname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etMName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_mname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:text="Дата рождения"
                    android:textSize="24sp" />

                <DatePicker
                    android:id="@+id/dpBirthDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:calendarViewShown="false"
                    android:hint="@string/prompt_birthdate" />
            </LinearLayout>

            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />
            
            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />
            
            <TextView
                android:id="@+id/tvQuestion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="Вопрос №1:"
                android:ems="10" />

            <EditText
                android:id="@+id/etAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ответ №1"
                android:ems="10" />

            <TextView
                android:id="@+id/tvQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="Вопрос №2:"
                android:ems="10" />
            
            <EditText
                android:id="@+id/etAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ответ №2"
                android:ems="10" />
            

            <Button
                android:id="@+id/btnChangePassword"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_change_password"
                android:textSize="24sp" />

            
        </LinearLayout>
    </ScrollView>

</merge>